tests/rosetta/out/Kotlin/4-rings-or-4-squares-puzzle.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/4-rings-or-4-squares-puzzle.kt:65:17: error: type inference failed: Not enough information to infer parameter T in inline fun <T> mutableListOf(): MutableList<T>
Please specify it explicitly.

    var valid = mutableListOf()
                ^
